--- a/login.html
+++ b/login.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=h1, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>This is my app</h1>
-    <h2>Web Development</h2>
-    <h3>New Form</h3>
+    <h1>Login Form</h1>
 </body>
 </html>
